# BasicEngine

./: CMakeLists.txt
Configuration/: Config.cpp  Config.h
Configuration/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  SpotLight.cpp  SpotLight.h
Configuration/Object/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Configuration/Utils/: DirectionalLight.cpp  DirectionalLight.h  Hit.cpp  Hit.h  Image.cpp  Image.h  Light.cpp  Light.h  Ray.cpp  Ray.h  SpotLight.cpp  SpotLight.h
Engine3D/: Bezier1D.cpp  Bezier1D.h  BezierCurve.cpp  BezierCurve.h  Camera.cpp  Mesh.cpp  Mesh.h  MeshConstructor.cpp  MeshConstructor.h  MovableGLM.cpp  MovableGLM.h  Route3DBezier1D.cpp  Route3DBezier1D.h  RouteBezier.cpp  RouteBezier.h  camera.h  scene.cpp  scene.h  shader.cpp  shader.h  shape.cpp  shape.h
Game/: CannySobel.cpp  CannySobel.h  InputManager.h  game.cpp  game.h  main.cpp
Game/Configuration/: GPTCube.cpp  GPTCube.h  RubiksCube.cpp  RubiksCube.h
Game/configuration/: BezierCurve.h  Route3DBezier1D.cpp  Route3DBezier1D.h
res/includes/glfw/examples/: heightmap.c
res/includes/glfw/src/: context.c
res/includes/glm/gtc/: matrix_transform.hpp
